web/public/style.css
:root {
  --pico-font-size: 100%;
}
body {
  display: grid;
  grid-template-rows: auto 1fr auto;
  height: 100vh;
}
nav li {
  margin-inline: 5px;
}
h1 > a,
h2 > a,
a:has(button) {
  color: currentColor;
  text-decoration: none;
}
main a > button {
  width: 100%;
}
h1 > a {
  vertical-align: sub;
}
h1 > a:hover,
h2 > a:hover {
  text-decoration: underline var(--pico-primary);
}
article > * {
  margin-right: 10px;
}
article button,
article > div > form > button[type="submit"] {
  padding: 5px;
}
article > div > form > button[type="submit"] {
  margin: 0;
}
article h2 {
  display: inline-block;
}
article > div {
  display: flex;
  gap: 5px;
  align-items: center;
}
article > div > * {
  display: flex;
  gap: 5px;
  align-items: center;
}
.msg {
  border-radius: var(--pico-border-radius);
  display: block;
  margin-bottom: 5px;
  text-align: center;
}
.msg-fail {
  --pico-mark-background-color: #d93526;
}
article > svg {
  float: left;
  width: 200px;
  height: 200px;
}
.centered-large-text {
  font-size: 1.2rem;
  text-align: center;
  margin: auto;
}

